--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test-routes": "yarn test -t router",
     "test-models": "yarn test -t model",
     "test-controllers": "yarn test -t controllers",
+    "test-auth": "yarn test -t auth",
     "dev": "nodemon --exec yarn restart",
     "restart": "rimraf dist && yarn build && yarn start",
     "start": "node dist/index.js"
